# power_opt

./: .gitignore  README.md  main.py  main_1.py  pyproject.toml
data/: dados_base.json
power_opt/: __init__.py
power_opt/experiments/: __init__.py  experimentos.py
power_opt/models/: __init__.py  base_generator.py  bus.py  deficit.py  fictitious_generator.py  hydro_generator.py  line.py  load.py  system.py  thermal_generator.py  wind_generator.py
power_opt/solver/: __init__.py  config_handler.py  model_builder.py  modelo_pyomo.py  pyomo_solver.py  result_handler.py
power_opt/solver/flags/: __init__.py  deficit.py  emissao.py  fluxo_dc.py  perdas.py  rampa.py  transporte.py  utils.py
power_opt/solver/handler/: __init__.py  config_handler.py  debug_handler.py  dual_handler.py  output_handler.py  plot_handler.py  result_handler.py
power_opt/utils/: __init__.py  clean.py  clean_handler.py  converter.py  loader.py
results/: debug_perdas.csv  duais_acumulado.csv  resultados_n_menos_1.csv  resultados_otimizacao.csv  resultados_sem_perdas.csv
results/csv/: duais.csv  resultados_com_perda.csv  resultados_sem_perda.csv  simulacoes.csv
tests/: test_loader_manual.py  teste_modelo_pyomo.py
